--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/digital-marketing-detail.html">Marketing</a></li>
-                            <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
@@ -96,7 +96,7 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                        <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
