--- a/courses-detail/automated-testing.html
+++ b/courses-detail/automated-testing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edrio - Chi tiết khóa học: Phát triển Web Toàn diện</title>
+    <title>Chi tiết khóa học: Kiểm Thử Tự Động</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../css/base.css">
@@ -16,7 +16,7 @@
     <header class="main-header">
         <div class="container">
             <a href="../index.html" class="logo">
-                <img src="img/logo.png" alt="Edrio Logo">
+                <img src="../image/anh2.png" alt="PLT Logo">
             </a>
             <nav class="main-nav">
                 <ul class="nav-list">
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="../courses.html">Tất cả khóa học</a></li>
                             <li><a href="digital-marketing-detail.html">Marketing</a></li>
-                            <li><a href="web-detail.html">Phát triển Web</a></li>
+                            <li><a href="automated-testing.html">Kiểm thử tự động</a></li>
                             <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="photography-detail.html">Nhiếp ảnh</a></li>
@@ -56,15 +56,15 @@
     <section class="page-hero-detail-section section-padding-small">
         <div class="container">
             <div class="breadcrumb">
-                <a href="../index.html">Trang chủ</a> / <a href="../courses.html">Khóa học</a> / Phát triển Web Toàn diện
+                <a href="../index.html">Trang chủ</a> / <a href="../courses.html">Khóa học</a> / Kiểm Thử Tự Động
             </div>
             <div class="course-detail-header">
                 <div class="course-detail-meta">
-                    <span class="course-category-pill">Phát triển Web</span>
+                    <span class="course-category-pill">Kiểm Thử Tự Động</span>
                     <span class="course-level">Tất cả cấp độ</span>
                 </div>
-                <h1 class="course-detail-title">Khóa học Phát triển Web Toàn diện từ A-Z</h1>
-                <p class="course-detail-tagline">Trở thành lập trình viên Full-stack chuyên nghiệp với HTML, CSS, JavaScript, React, Node.js và MongoDB.</p>
+                <h1 class="course-detail-title">Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z</h1>
+                <p class="course-detail-tagline">Nắm vững các kỹ thuật và vận hành các công cụ kiểm thử hiện đại.</p>
                 <div class="course-detail-info">
                     <div class="info-item">
                         <i class="fas fa-star"></i> 4.9 (2,500 đánh giá)
@@ -84,24 +84,23 @@
         <div class="container course-detail-grid">
             <div class="course-left-col">
                 <div class="course-image-hero">
-                    <img src="img/course-detail-hero.jpg" alt="Web Development Course Detail">
+                    <img src="../image/automated-testing1.jpg" alt="AUTOMATIC TESTING COURSE">
                 </div>
 
                 <div class="course-section overview-section">
                     <h3>Tổng quan khóa học</h3>
-                    <p>Khóa học này được thiết kế để đưa bạn từ con số 0 trở thành một nhà phát triển web full-stack có khả năng xây dựng các ứng dụng web phức tạp. Bạn sẽ học các công nghệ frontend và backend quan trọng nhất hiện nay.</p>
-                    <p>Chúng tôi tập trung vào việc học thông qua thực hành, với rất nhiều dự án thực tế và bài tập coding. Bạn sẽ xây dựng một danh mục các dự án để trình bày kỹ năng của mình cho nhà tuyển dụng tiềm năng.</p>
+                    <p>Bạn đã từng nghe đến "tự động hoá kiểm thử", nhưng không biết bắt đầu từ đâu? Khóa học này chính là tấm vé giúp bạn bước vào thế giới kiểm thử hiện đại – nơi mà máy móc thay bạn test thủ công nhàm chán và bạn trở thành người kiểm soát toàn bộ quy trình một cách thông minh.</p>
+                    <p>Ngoài kỹ thuật, bạn còn được làm dự án thực hành, áp dụng vào case thực tế gần giống môi trường công ty.</p>
                 </div>
 
                 <div class="course-section what-you-learn-section">
                     <h3>Bạn sẽ học được gì</h3>
                     <ul class="learn-list">
-                        <li><i class="fas fa-check-circle"></i> Xây dựng các trang web đáp ứng với HTML5 & CSS3.</li>
-                        <li><i class="fas fa-check-circle"></i> Lập trình tương tác với JavaScript và React.js.</li>
-                        <li><i class="fas fa-check-circle"></i> Phát triển API backend với Node.js & Express.</li>
-                        <li><i class="fas fa-check-circle"></i> Quản lý dữ liệu với cơ sở dữ liệu MongoDB.</li>
-                        <li><i class="fas fa-check-circle"></i> Triển khai ứng dụng web lên máy chủ.</li>
-                        <li><i class="fas fa-check-circle"></i> Kỹ năng làm việc nhóm và giải quyết vấn đề.</li>
+                        <li><i class="fas fa-check-circle"></i> Làm chủ những công cụ kiểm thử tự động đang được dùng rộng rãi tại các doanh nghiệp lớn.</li>
+                        <li><i class="fas fa-check-circle"></i> Hiểu rõ cách viết và chạy test tự động cho website, API mà không cần giỏi code,...</li>
+                        <li><i class="fas fa-check-circle"></i> Tư duy đúng về tự động hoá, biết khi nào nên dùng – khi nào không.</li>
+                        <li><i class="fas fa-check-circle"></i> Rút ngắn 1–2 năm kinh nghiệm thực tế chỉ trong vài tháng học</li>
+                        <li><i class="fas fa-check-circle"></i> Học xong, bạn tự tin ứng tuyển vào vị trí Automation Tester hoặc QA có khả năng sử dụng automation – vốn đang được ưu tiên tuyển dụng tại mọi công ty phần mềm hiện nay.</li>
                     </ul>
                 </div>
 
@@ -154,9 +153,9 @@
                 <div class="course-section instructor-section">
                     <h3>Giảng viên</h3>
                     <div class="instructor-card">
-                        <img src="img/instructor-john-doe.jpg" alt="John Doe" class="instructor-avatar">
+                        <img src="img/instructor-john-doe.jpg" alt="Mr PLT" class="instructor-avatar">
                         <div class="instructor-details">
-                            <h4>John Doe</h4>
+                            <h4>Mr PLT</h4>
                             <p class="instructor-title">Chuyên gia Phát triển Web Full-stack</p>
                             <p class="instructor-bio">Với hơn 10 năm kinh nghiệm trong lĩnh vực phát triển web, John Doe đã đào tạo hàng ngàn học viên thành công. Anh là một người đam mê chia sẻ kiến thức và luôn cập nhật những công nghệ mới nhất.</p>
                             <div class="instructor-stats">
@@ -249,7 +248,7 @@
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
                     <button class="btn btn-outline-primary btn-block add-to-cart-btn"
                         data-course-id="web-dev-fullstack"
-                        data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
+                        data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
                         data-course-price="49.99">Thêm vào giỏ hàng</button>
 
                     <div class="sidebar-features">
@@ -294,7 +293,7 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="web-detail.html">Phát triển Web</a></li>
+                        <li><a href="Kiểm Thử Tự Động.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="digital-marketing-detail.html">Marketing số</a></li>
                         <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
