--- a/courses.html
+++ b/courses.html
@@ -25,7 +25,7 @@
                         <a href="#" class="active">Khóa học <i class="fas fa-chevron-down"></i></a> <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/digital-marketing-detail.html">Marketing</a></li>
-                            <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
@@ -67,28 +67,28 @@
             <div class="courses-grid">
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh4.jpg" alt="Web Development Course">
+                        <img src="image/automated-testing.jpg" alt="Automated Testing">
                         <div class="course-category">
-                            <a href="#">Phát triển Web</a>
+                            <a href="#">Kiểm Thử Tự Động</a>
                         </div>
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> John Doe</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.9 (250)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="courses-detail/web-detail.html">Khóa học Phát triển Web Toàn diện từ A-Z</a></h3>
+                        <h3 class="course-title"><a href="courses-detail/automated-testing.html">Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z</a></h3>
                         <p class="course-description">
-                            Học cách xây dựng các trang web và ứng dụng web hiện đại.
+                            Nắm vững các kỹ thuật và vận hành các công cụ kiểm thử hiện đại.
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$49.99</span>
-                            <a href="courses-detail/web-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <span class="course-price">4.500.000VNĐ</span>
+                            <a href="courses-detail/automated-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="web-dev-fullstack"
-                                data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
+                                data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
                                 data-course-price="49.99">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Michael Brown</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.9 (300)
                             </span>
@@ -130,7 +130,7 @@
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Sarah Lee</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.6 (150)
                             </span>
@@ -159,7 +159,7 @@
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Robert Green</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.7 (200)
                             </span>
@@ -186,7 +186,7 @@
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Jane Smith</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.8 (180)
                             </span>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Emily White</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.7 (210)
                             </span>
@@ -255,7 +255,7 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                        <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
