--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="./courses-detail/digital-marketing-detail.html">Marketing</a></li>
-                            <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
@@ -158,49 +158,49 @@
             <div class="courses-grid">
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh4.jpg" alt="Web Development Course">
+                        <img src="image/automated-testing.jpg" alt="Web Development Course">
                         <div class="course-category">
-                            <a href="./courses-detail/web-detail.html">Phát triển Web</a>
+                            <a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a>
                         </div>
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> John Doe</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.9 (250)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="./courses-detail/web-detail.html">Khóa học Phát triển Web Toàn diện từ A-Z</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/automated-testing.html">Khóa học Kiểm Thử Tự Động Toàn Diện Từ A-Z</a></h3>
                         <p class="course-description">
-                            Học cách xây dựng các trang web và ứng dụng web hiện đại.
+                            Nắm vững các kỹ thuật và vận hành các công cụ kiểm thử hiện đại
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$49.99</span>
-                            <a href="courses-detail/web-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <span class="course-price">4.500.000VNĐ</span>
+                            <a href="courses-detail/automated-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh5.jpg" alt="Digital Marketing Course">
+                        <img src="image/ktphanmem.jpg" alt="Digital Marketing Course">
                         <div class="course-category">
-                            <a href="./courses-detail/digital-marketing-detail.html">Marketing</a>
+                            <a href="./courses-detail/digital-marketing-detail.html">Kiểm Thử Phần Mềm</a>
                         </div>
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Jane Smith</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.8 (180)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="./courses-detail/digital-marketing-detail.html">Chiến lược Digital Marketing hiệu quả</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/digital-marketing-detail.html">Khóa Học Kiểm Thử Phần Mềm – Dành Cho Người Trái Ngành</a></h3>
                         <p class="course-description">
-                            Nắm vững các công cụ và chiến lược marketing trực tuyến.
+                            Nắm vững các kĩ năng cơ bản về Kiểm Thử Phần Mềm
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$59.99</span>
+                            <span class="course-price">4.500.000VNĐ</span>
                             <a href="courses-detail/digital-marketing-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                         </div>
                     </div>
@@ -208,28 +208,29 @@
 
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh6.jpg" alt="Graphic Design Course">
+                        <img src="image/tinhoc.jpg" alt="Graphic Design Course">
                         <div class="course-category">
-                            <a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a>
+                            <a href="./courses-detail/graphic-design-detail.html">Tin Học Văn Phòng</a>
                         </div>
                     </div>
                     <div class="course-content">
                         <div class="course-meta">
-                            <span class="course-author"><i class="fas fa-user"></i> Emily White</span>
+                            <span class="course-author"><i class="fas fa-user"></i> Mr PLT</span>
                             <span class="course-rating">
                                 <i class="fas fa-star"></i> 4.7 (210)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="./courses-detail/graphic-design-detail.html">Mastering Adobe Photoshop & Illustrator</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/graphic-design-detail.html">Khoá Học Tin Học Văn Phòng Căn Bản (Word, Excel, Powerpoint)</a></h3>
                         <p class="course-description">
-                            Thiết kế đồ họa chuyên nghiệp với bộ công cụ Adobe.
+                            Nắm vững các kĩ năng tin học văn học cơ bản (Word, Excel, Powerpoint)
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$69.99</span>
+                            <span class="course-price">4.500.000VNĐ</span>
                             <a href="courses-detail/graphic-design-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                         </div>
                     </div>
                 </div>
+            </div>
             <div class="text-center mt-5">
                 <a href="courses.html" class="btn btn-primary btn-lg">Xem tất cả khóa học</a>
             </div>
@@ -253,7 +254,7 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                        <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
