--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Phát triển Web</a></li>
+                            <li><a href="#">Kiểm Thử Tự Động</a></li>
                             <li><a href="#">Thiết kế đồ họa</a></li>
                         </ul>
                     </li>
@@ -101,7 +101,7 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="#">Phát triển Web</a></li>
+                        <li><a href="#">Kiểm Thử Tự Động</a></li>
                         <li><a href="#">Marketing số</a></li>
                         <li><a href="#">Thiết kế đồ họa</a></li>
                         <li><a href="#">Khoa học dữ liệu</a></li>
