--- a/checkout.html
+++ b/checkout.html
@@ -25,7 +25,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
                             <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Phát triển Web</a></li>
+                            <li><a href="#">Kiểm Thử Tự Động</a></li>
                             <li><a href="#">Thiết kế đồ họa</a></li>
                         </ul>
                     </li>
@@ -124,7 +124,7 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="./courses-detail/web-detail.html">Phát triển Web</a></li>
+                        <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                         <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
