--- a/courses-detail/digital-marketing-detail.html
+++ b/courses-detail/digital-marketing-detail.html
@@ -26,7 +26,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="../courses.html">Tất cả khóa học</a></li>
                             <li><a href="digital-marketing-detail.html">Marketing</a></li>
-                            <li><a href="web-detail.html">Phát triển Web</a></li>
+                            <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
                             <li><a href="photography-detail.html">Nhiếp ảnh</a></li>
