Update software-testing Files

--- a/courses-detail/automated-testing.html
+++ b/courses-detail/automated-testing.html
@@ -25,7 +25,7 @@
                         <a href="#">Khóa học <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="../courses.html">Tất cả khóa học</a></li>
-                            <li><a href="digital-marketing-detail.html">Marketing</a></li>
+                            <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="automated-testing.html">Kiểm thử tự động</a></li>
                             <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
@@ -73,7 +73,7 @@
                         <i class="fas fa-users"></i> 15,000 học viên
                     </div>
                     <div class="info-item">
-                        <i class="fas fa-user"></i> Giảng viên: John Doe
+                        <i class="fas fa-user"></i> Giảng viên: Mr PLT
                     </div>
                 </div>
             </div>
@@ -241,8 +241,8 @@
             <div class="course-right-col">
                 <div class="course-sidebar">
                     <div class="sidebar-price">
-                        <span class="current-price">$49.99</span>
-                        <span class="original-price">$99.99</span>
+                        <span class="current-price">4.500.000VNĐ</span>
+                        <span class="original-price">9.000.000VNĐ</span>
                         <span class="discount">50% Off</span>
                     </div>
                     <button class="btn btn-primary btn-block mb-3">Đăng ký ngay</button>
@@ -254,11 +254,11 @@
                     <div class="sidebar-features">
                         <h4>Khóa học bao gồm:</h4>
                         <ul>
-                            <li><i class="fas fa-video"></i> 40 giờ video theo yêu cầu</li>
-                            <li><i class="fas fa-file-alt"></i> 100 tài liệu có thể tải xuống</li>
-                            <li><i class="fas fa-mobile-alt"></i> Truy cập trên di động và TV</li>
-                            <li><i class="fas fa-infinity"></i> Truy cập trọn đời</li>
-                            <li><i class="fas fa-trophy"></i> Chứng chỉ hoàn thành</li>
+                            <li><i class="fas fa-video"></i> Chương trình giảng dạy: 60 tiết (mỗi buổi 3 - 5 tiết) bao gồm cả Lý thuyết và Thực hành</li>
+                            <li><i class="fas fa-file-alt"></i> Lớp mở liên tục trong tháng chủ động theo nhóm Học viên</li>
+                            <li><i class="fas fa-mobile-alt"></i> Thời gian học tập thuận lợi đáp ứng theo thời gian đi làm của học viên (có thể học buổi tối sau giờ làm, học ngày thứ 7, Chủ Nhật, Học Online,....)</li>
+                            <li><i class="fas fa-infinity"></i> Địa điểm học tập chủ động theo Nhóm học viên (nhóm tối thiểu 3 học viên).</li>
+                            <li><i class="fas fa-trophy"></i> Đội ngũ Giảng viên giảng dạy có Trình độ Thạc Sĩ, có kỹ năng Sư phạm tốt và có kinh nghiệm làm việc ở các Công ty, Trường học,..... đem đến các bài giảng thú vị và hiệu quả cho quý Học viên.</li>
                         </ul>
                     </div>
                     <div class="share-course">
@@ -280,7 +280,7 @@
             <div class="footer-grid">
                 <div class="footer-col about-col">
                     <a href="../index.html" class="footer-logo">
-                        <img src="img/logo-white.png" alt="Edrio Logo">
+                        <img src="../image/anh1.png" alt="PLT Logo">
                     </a>
                     <p>Chúng tôi là nền tảng học tập trực tuyến hàng đầu, mang đến những khóa học chất lượng cao từ các chuyên gia.</p>
                     <div class="social-links">
@@ -294,7 +294,7 @@
                     <h4>Khóa học</h4>
                     <ul>
                         <li><a href="Kiểm Thử Tự Động.html">Kiểm Thử Tự Động</a></li>
-                        <li><a href="digital-marketing-detail.html">Marketing số</a></li>
+                        <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="photography-detail.html">Nhiếp ảnh</a></li>
