--- a/courses.html
+++ b/courses.html
@@ -24,7 +24,7 @@
                     <li class="has-dropdown">
                         <a href="#" class="active">Khóa học <i class="fas fa-chevron-down"></i></a> <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="./courses-detail/digital-marketing-detail.html">Marketing</a></li>
+                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềmg</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
@@ -69,7 +69,7 @@
                     <div class="course-thumbnail">
                         <img src="image/automated-testing.jpg" alt="Automated Testing">
                         <div class="course-category">
-                            <a href="#">Kiểm Thử Tự Động</a>
+                            <a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a>
                         </div>
                     </div>
                     <div class="course-content">
@@ -89,7 +89,7 @@
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="web-dev-fullstack"
                                 data-course-name="Khóa học Kiểm Thử Tự Động Toàn diện từ A-Z"
-                                data-course-price="49.99">Thêm vào giỏ hàng</button>
+                                data-course-price="4.500.000">Thêm vào giỏ hàng</button>
                         </div>
                     </div>
                     <div class="course-item">
@@ -179,9 +179,9 @@
                     </div>
                     <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/anh5.jpg" alt="Digital Marketing Course">
+                        <img src="image/software-testing.jpg" alt="Digital Marketing Course">
                         <div class="course-category">
-                            <a href="#">Marketing</a>
+                            <a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a>
                         </div>
                     </div>
                     <div class="course-content">
@@ -191,13 +191,13 @@
                                 <i class="fas fa-star"></i> 4.8 (180)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="#">Chiến lược Digital Marketing hiệu quả</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/software-testing.html">Khóa Học Kiểm Thử Phần Mềm – Dành Cho Người Trái Ngành</a></h3>
                         <p class="course-description">
-                            Nắm vững các công cụ và chiến lược marketing trực tuyến.
+                            Nắm vững các kĩ năng cơ bản về Kiểm Thử Phần Mềm.
                         </p>
                         <div class="course-footer">
-                            <span class="course-price">$59.99</span>
-                            <a href="courses-detail/digital-marketing-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <span class="course-price">4.500.000VNĐ</span>
+                            <a href="./courses-detail/software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                             <button class="btn btn-sm btn-success add-to-cart-btn"
                                 data-course-id="web-dev-fullstack"
                                 data-course-name="Khóa học Phát triển Web Toàn diện từ A-Z"
@@ -256,7 +256,7 @@
                     <h4>Khóa học</h4>
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                        <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
+                        <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
