--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,8 +25,8 @@
                         <a href="courses.html">Khóa học <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Kiểm Thử Tự Động</a></li>
+                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
+                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="#">Thiết kế đồ họa</a></li>
                         </ul>
                     </li>
@@ -114,8 +114,8 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="#">Kiểm Thử Tự Động</a></li>
-                        <li><a href="#">Marketing số</a></li>
+                        <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
+                        <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="#">Thiết kế đồ họa</a></li>
                         <li><a href="#">Khoa học dữ liệu</a></li>
                         <li><a href="#">Nhiếp ảnh</a></li>
