--- a/courses-detail/photography-detail.html
+++ b/courses-detail/photography-detail.html
@@ -25,7 +25,7 @@
                         <a href="#">Khóa học <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="../courses.html">Tất cả khóa học</a></li>
-                            <li><a href="digital-marketing-detail.html">Marketing</a></li>
+                            <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="data-science-detail.html">Khoa học dữ liệu</a></li>
@@ -294,8 +294,8 @@
                 <div class="footer-col links-col">
                     <h4>Khóa học</h4>
                     <ul>
-                        <li><a href="#">Phát triển Web</a></li>
-                        <li><a href="#">Marketing số</a></li>
+                        <li><a href="automated-testing.html">Kiểm Thử Tự Động</a></li>
+                        <li><a href="software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="#">Thiết kế đồ họa</a></li>
                         <li><a href="#">Khoa học dữ liệu</a></li>
                         <li><a href="#">Nhiếp ảnh</a></li>
