--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <a href="courses.html">Khóa học <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="./courses-detail/digital-marketing-detail.html">Marketing</a></li>
+                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                             <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                             <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
@@ -183,9 +183,9 @@
 
                 <div class="course-item">
                     <div class="course-thumbnail">
-                        <img src="image/ktphanmem.jpg" alt="Digital Marketing Course">
+                        <img src="image/software-testing.jpg" alt="Digital Marketing Course">
                         <div class="course-category">
-                            <a href="./courses-detail/digital-marketing-detail.html">Kiểm Thử Phần Mềm</a>
+                            <a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a>
                         </div>
                     </div>
                     <div class="course-content">
@@ -195,13 +195,13 @@
                                 <i class="fas fa-star"></i> 4.8 (180)
                             </span>
                         </div>
-                        <h3 class="course-title"><a href="./courses-detail/digital-marketing-detail.html">Khóa Học Kiểm Thử Phần Mềm – Dành Cho Người Trái Ngành</a></h3>
+                        <h3 class="course-title"><a href="./courses-detail/software-testing.html">Khóa Học Kiểm Thử Phần Mềm – Dành Cho Người Trái Ngành</a></h3>
                         <p class="course-description">
                             Nắm vững các kĩ năng cơ bản về Kiểm Thử Phần Mềm
                         </p>
                         <div class="course-footer">
                             <span class="course-price">4.500.000VNĐ</span>
-                            <a href="courses-detail/digital-marketing-detail.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
+                            <a href="courses-detail/software-testing.html" class="btn btn-sm btn-outline-primary">Xem chi tiết</a>
                         </div>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                     <h4>Khóa học</h4>
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                        <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
+                        <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
