--- a/register.html
+++ b/register.html
@@ -25,8 +25,8 @@
                         <a href="#">Khóa học <i class="fas fa-chevron-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="courses.html">Tất cả khóa học</a></li>
-                            <li><a href="#">Marketing</a></li>
-                            <li><a href="#">Kiểm Thử Tự Động</a></li>
+                            <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
+                            <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
                             <li><a href="#">Thiết kế đồ họa</a></li>
                         </ul>
                     </li>
@@ -98,7 +98,7 @@
                     <h4>Khóa học</h4>
                     <ul>
                         <li><a href="./courses-detail/automated-testing.html">Kiểm Thử Tự Động</a></li>
-                        <li><a href="./courses-detail/digital-marketing-detail.html">Marketing số</a></li>
+                        <li><a href="./courses-detail/software-testing.html">Kiểm Thử Phần Mềm</a></li>
                         <li><a href="./courses-detail/graphic-design-detail.html">Thiết kế đồ họa</a></li>
                         <li><a href="./courses-detail/data-science-detail.html">Khoa học dữ liệu</a></li>
                         <li><a href="./courses-detail/photography-detail.html">Nhiếp ảnh</a></li>
